# YOLO-Projects

./: .gitignore  README.md
E2E-Workflow-for-Object-Detection-Deployment/: .gitignore  Dockerfile  Makefile  README.md  config.yml  main.py  pyproject.toml  requirements.txt
E2E-Workflow-for-Object-Detection-Deployment/configs/: example.yaml
E2E-Workflow-for-Object-Detection-Deployment/scripts/: end_to_end.sh
E2E-Workflow-for-Object-Detection-Deployment/src/yolo_project/: cli.py  export_artifacts.py  plots.py  predict.py  prepare.py  train.py
YOLOv11-Custom-Object-Detection/: README.md  config.json  requirements.txt  run_benchmark.bat  run_export.bat  run_label_check.bat  run_live_inference.bat  run_menu.bat  run_tensorboard.bat  run_train.bat  run_validate.bat  train_pipeline.py
YOLOv11-Custom-Object-Detection/dataset/: README.md  data.yaml
YOLOv11-Custom-Object-Detection/docs/: cvat_setup_guide.md  hyperparameter_tuning.md  implementation_plan.md  labeling_guideline.md  metrics_guide.md  project_architecture.md  training_guide.md
YOLOv11-Custom-Object-Detection/scripts/: __init__.py  benchmark_comparison.py  benchmark_results.txt  check_gpu.py  convert_to_tensorboard.py  export_model.py  inference.py  inference_onnx.py  live_inference.py  logger_utils.py  test_gpu_execution.py  validate_model.py  visualize_labels.py
YOLOv8-Oriented-Bounding-Box/: README.md
YOLOv8-Oriented-Bounding-Box/bolts_yolov8_obb/exp/: args.yaml  results.csv
YOLOv8-Oriented-Bounding-Box/configs/: train_info.yaml
YOLOv8-Oriented-Bounding-Box/src/: config.py
(+1274 files in other folders)
